# zxlive

./: .gitignore  MANIFEST.in  pyproject.toml  pysidedeploy.spec
.github/workflows/: deploy.yml  lint.yml  rolling.yml  test.yml
scripts/: make_icns.py
test/: conftest.py  test_mainwindow.py  test_rewrite_action.py  test_triangle.py  test_triangle_inverse.py  test_vitem.py  test_zw_bialgebra.py
zxlive/: animations.py  app.py  base_panel.py  commands.py  common.py  custom_rule.py  dialogs.py  editor_base_panel.py  eitem.py  graphscene.py  graphview.py  mainwindow.py  pauliwebs_panel.py  proof.py  proof_panel.py  rewrite_action.py  rewrite_data.py  settings.py  vitem.py
zxlive/icons/: logo.icns
