[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "zxlive"
version = "1.0.0"
description = "An interactive tool for the ZX-calculus"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "ZXLive contributors" },
    { email = "john@vdwetering.name" }
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "PySide6 >= 6.11",
    "pyzx @ git+https://github.com/Fabrial-Research/pyzx.git@v0.10.4-zxw.1",
    "networkx >= 3.6",
    "numpy >= 2.5",
    "shapely >= 2.1",
    "pyperclip >= 1.11",
    "imageio >= 2.37",
    "packaging >= 26",
    "matplotlib >= 3.11",
]

[project.optional-dependencies]
test = [
    "mypy==1.19.1",
    "ruff",
    "pytest-qt",
    "complexipy",
]
doc = [
    "sphinx>=9.1.0",
    "sphinx_autodoc_typehints>=3.9.5",
    "sphinx_rtd_theme>=3.1.0",
    "sphinxcontrib-svg2pdfconverter>=2.0.0",
    "myst-parser>=5.0.0"
]

[project.urls]
Homepage = "https://github.com/zxcalc/zxlive"
Repository = "https://github.com/zxcalc/zxlive"
Issue-Tracker = "https://github.com/zxcalc/zxlive/issues"

[tool.setuptools]
packages = [
    "zxlive"
]

# Ship non-Python assets inside the wheel. Without this, `pip install zxlive`
# produces a wheel with no icons/tooltips/sfx and the app crashes on startup
# loading them via `get_data(...)`. Keep in sync with MANIFEST.in (sdist).
[tool.setuptools.package-data]
zxlive = [
    "icons/*",
    "tooltips/*",
    "sfx/*",
]

[project.gui-scripts]
zxlive = "zxlive.app:main"

[tool.pyright]
reportWildcardImportFromLibrary = "none"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "F",      # Pyflakes
    # "UP",   # pyupgrade
    # "B",    # flake8-bugbear
    # "SIM",  # flake8-simplify
    # "I",    # isort
]
ignore = [
    "E501",
    "E721", # False positive: triggers on .type() method calls, not just type() builtin
]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disable_error_code = [
    "import",
]
